tests/interpreter/and-expression-bad-types2.stderr
error: expected 'Bool', got 'Number'
 --> $DIR/and-expression-bad-types2.lox:1:10
  |
1 | true and 2;
  |          ^
